<resources>
    <string name="app_name">考勤系统</string>
    <string name="BaseUrl">http://172.28.129.52:8080/AMSFull/</string>
    <string name="login">登陆</string>
    <string name="input_your_name">请输入您的用户名</string>
    <string name="input_your_password">请输入您的密码</string>
    <string name="person_login">登陆</string>
    <string name="forget_password">找回密码</string>
    <string name="register">免费注册</string>
</resources>
