<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <!--头部内容-->
    <RelativeLayout
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#008cc9">

        <!--<ImageView-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_margin="16dp"-->
            <!--android:src="@mipmap/login_close" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="16dp"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="30sp" />
    </RelativeLayout>

    <!--输入框-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/input_your_name" />
        />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:hint="@string/input_your_password" />
        />
    </RelativeLayout> <!--密码功能-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d4d4d4"
            android:text="@string/person_login" />

        <Button
            android:id="@+id/btn_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:gravity="start"
            android:text="@string/forget_password"
            android:textColor="#2999ce"
            android:textSize="16dp" />

        <Button
            android:id="@+id/register_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/login"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:gravity="end"
            android:text="@string/register"
            android:textColor="#2999ce"
            android:textSize="16dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/login_showmesg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />
</LinearLayout>
